Resolved NavBar jumping on state change.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@ html {
 #heroHome {
 	min-height: 100vh;
 	background-size: cover;
+	background-attachment: fixed;
 	background-image: linear-gradient(to right bottom,
 		rgba(#25680a, 0.7),
 		rgba(#16538b, 0.7)),
@@ -416,15 +417,10 @@ html {
 }
 #forcesHero {
 	min-height: 100vh;
+	background-attachment: fixed;
 	background-size: cover;
 	background-image: linear-gradient(to right bottom,
 		rgba(#1c360b, 0.7),
 		rgba(#262e36, 0.7)),
 		url('/images/British_troops_2.jpg');
 }
-// #forcesFamilySLC {
-// 	height: 10em;
-// 	background-size: cover;
-// 	background-position: center;
-// 	background-image: url('/images/SLC.jpg');
-// }
